<resources>
    <string name="app_name">LoginApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingrese_email">Ingrese Email</string>
    <string name="registro">Registro</string>
    <string name="email">Ingrese Email</string>
    <string name="contra">Ingrese Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="volver">Volver</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="imagen_adorno">Imagen_adorno</string>
    <string name="iniciar_ses">Iniciar Sesión</string>
</resources>