<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fondo"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_margen_izq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_margen_derecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_mitad_pantalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.53" />

    <View
        android:id="@+id/view_circulo_uno"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0.5"
        android:background="@drawable/circle"
        android:translationX="-75dp"
        android:translationY="-100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_circulo_dos"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0.3"
        android:background="@drawable/circle"
        tools:layout_editor_absoluteX="241dp"
        tools:layout_editor_absoluteY="-71dp" />

    <View
        android:id="@+id/view_circulo_tres"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0.4"
        android:background="@drawable/circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/guide_mitad_pantalla"
        android:translationX="-100dp"
        android:translationY="-80dp"/>


    <TextView
        android:id="@+id/titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/registro"
        android:textColor="@color/color_texto"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide_email"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ing_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        android:textColor="@color/color_texto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_derecho"
        app:layout_constraintTop_toBottomOf="@id/guide_password" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="258dp"
        android:layout_height="37dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guide_botones"
        app:layout_constraintEnd_toStartOf="@+id/guide_margen_derecho"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/guide_margen_izq"
        app:layout_constraintTop_toTopOf="@+id/guide_password"
        app:layout_constraintVertical_bias="0.587"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/contra"
        android:textColor="@color/color_texto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_derecho"
        app:layout_constraintTop_toBottomOf="@id/guide_password" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="258dp"
        android:layout_height="37dp"
        android:layout_marginTop="168dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guide_margen_derecho"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/guide_margen_izq"
        app:layout_constraintTop_toTopOf="@+id/guide_password"
        tools:ignore="LabelFor,MissingConstraints" />

    <Button
        android:id="@+id/button_Registrar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/round_bg"
        android:text="@string/registrarse"
        android:textColor="@color/color_texto_claro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_derecho" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="116dp"
        android:layout_height="113dp"
        android:contentDescription="@string/imagen_adorno"
        android:src="@drawable/reg"
        app:layout_constraintBottom_toTopOf="@+id/guide_password"
        app:layout_constraintEnd_toStartOf="@+id/guide_margen_derecho"
        app:layout_constraintStart_toStartOf="@+id/guide_margen_izq"
        app:layout_constraintTop_toBottomOf="@+id/titulo_registro"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>